# sqlicrawler

./: .gitignore  README.md  pyproject.toml
sqlicrawler/: __init__.py  blacklist.txt  log.py  meta.py  types.py  utils.py
sqlicrawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_blacklist.py  test_sqlicrawler.py  test_utils.py
