[tool.poetry]
name = "sqlicrawler"
version = "0.1.3"
description = "SQLi Crawler with JavaScript support."
authors = ["Sergey M <tz4678@gmail.com>"]
classifiers = [
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
license = "Personal Use License"
include = ["sqlicrawler/blacklist.txt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pyppeteer = "^0.2.2"
ujson = "^3.1.0"
aiodns = "^2.0.0"
aiohttp = "^3.6.2"
aiohttp_socks = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
sqlicrawler="sqlicrawler:cli"
